--- a/elementos conectados/elementos.html
+++ b/elementos conectados/elementos.html
@@ -13,8 +13,7 @@
 
             //variable declaration section
             let physicsWorld, scene, camera, renderer, rigidBodies = [];
-            let colGroupPlane = 1, colGroupRedBall = 2, colGroupGreenBall = 4
-
+            let colGroupPlane = 1;
             //Ammojs Initialization
             Ammo().then(start)
 
