--- a/elementos conectados/elementos.html
+++ b/elementos conectados/elementos.html
@@ -264,7 +264,7 @@
                 //Create Joints
                 let spherePivot = new Ammo.btVector3( 0, - radius, 0 );
                 let blockPivot = new Ammo.btVector3( - scale.x * 0.5, 1, 1 );
-                let block1Pivot=new Ammo.btVector3(-scale.x*0.5,1,1);
+                let block1Pivot=new Ammo.btVector3(-scale.x*0.5+(pos1.x-pos2.x),1,1);
                 let p2p = new Ammo.btPoint2PointConstraint( sphereBody, blockBody, spherePivot, blockPivot,block1Pivot);
                 physicsWorld.addConstraint( p2p, false );
 
